Fixed spacing added MVP items

--- a/css/body.css
+++ b/css/body.css
@@ -1,5 +1,6 @@
 body {
-    background: url(../assets/img/photo-1446716336919-df838e44ce7b.jpg) no-repeat;
+    background-image: linear-gradient( white,black);
+    width:100%;
 }
 
 
@@ -8,10 +9,9 @@ body {
 
 
 
-img{
+.flip-card-image{
     width: 100%;
     height: 100%;
-
     border-radius: 20px;
 }
 
@@ -78,7 +78,7 @@ section{
   } 
 
 .flip-card-back p{
-    font: Roboto, 15px;
+    font: Roboto, 17px;
 }
   .title {
     position: absolute;
@@ -91,3 +91,7 @@ section{
   }
 
 
+.profile {
+  width:300px;
+  height:400px;
+}
